<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.MainActivity"
    android:id="@+id/container">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="50dp"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/button_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_authoriz"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="65dp" />

            <Button
                android:id="@+id/btngameoffline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_1game"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="583dp" />

            <Button
                android:id="@+id/btn_2game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_2game"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="492dp" />

            <Button
                android:id="@+id/btn_lan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_lan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="405dp" />

            <Button
                android:id="@+id/btn_rec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_rec"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="321dp" />

            <Button
                android:id="@+id/btn_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_set"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="234dp" />

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_exit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="149dp" />

        </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
